--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 DATABASE_URL=postgres://test_pg:5432/test
+POSTGRES_USER=userpg
+POSTGRES_PASSWORD=pwd1234
+POSTGRES_DB=test
+POSTGRES_HOST_AUTH_METHOD=md5
+PGDATA=/var/lib/postgres/data/pgdata
